Make test pass